Implement balancing logic
